<resources>
    <string name="app_name">DogsApp</string>

    <string name="title_list">List</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_activity_images">ImagesActivity</string>
    <string name="title_breeds">Breeds</string>
    <string name="title_share">Share photo</string>
    <string name="title_server_error">Some server error</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="message_photo_sent">The photo was sent successfully.</string>
    <string name="message_connect_later">Try connect later</string>


    <string name="action_back">Back</string>
    <string name="action_share">Share</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">Ok</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>