<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_share"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="185dp"
    android:background="@drawable/background_rectangle_cornered"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/title_share"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBottomActionShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/action_share"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewBottomActionCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/action_cancel"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toTopOf="@+id/textViewBottomActionShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toTopOf="@+id/textViewBottomActionCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>